# prebuilder

./: .gitignore  .gitmodules  Jenkinsfile  Main.hs  README.md  build-cabal  build.cfg  clean  flake.nix  hie.yaml  prebuilder.cabal  shell.nix
.github/workflows/: ci.yml  pull_request.yml
list/: boost-i  boost-o  fmt-i  fmt-o  libevent-i  libevent-o  libintl-lite-i  libintl-lite-o  lua-i  lua-o
nix/: default.nix
patches/: glog.patch  iconv.h.in.patch  libchewing-host.patch  libchewing.patch  libhangul.patch  libiconv.cmake  librime-lua.patch  librime-octagram.patch  librime-predict.patch  librime.patch  libuv.patch  lua.patch  marisa-tire.patch  opencc-host.patch  opencc.patch  zstd.patch
patches/libiconv/: CMakeLists.txt  config.h  libiconv.patch
patches/libthai/: CMakeLists.txt
patches/m17n/: glob.c  glob.h  m17n.patch
src/: Base.hs  CMakeBuilder.hs  Main.hs
src/Rules/: AnthyData.hs  Boost.hs  ChewingData.hs  Fcitx5.hs  Fcitx5Data.hs  Fmt.hs  GLog.hs  LevelDB.hs  LibChewing.hs  LibEvent.hs  LibHangul.hs  LibIME.hs  LibIMEJyutping.hs  LibIconv.hs  LibIntlLite.hs  LibMozc.hs  LibRime.hs  LibThai.hs  LibUV.hs  Libuv.hs  Lua.hs  M17n.hs  Marisa.hs  MarisaTrie.hs  OpenCC.hs  YAMLCpp.hs  ZSTD.hs
