cabal-version: 3.0
name:          prebuilder
version:       0.1.0.0
author:        berberman
maintainer:    berberman@yandex.com
build-type:    Simple

executable prebuilder
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , extra
    , shake
    , text

  hs-source-dirs:   .
  default-language: Haskell2010
