cabal-version: 3.0
name:          prebuilder
version:       0.1.0.0
author:        berberman
maintainer:    berberman@yandex.com
build-type:    Simple

executable prebuilder
  ghc-options:      -Wall -threaded -rtsopts
  main-is:          Main.hs
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , extra
    , shake
    , text

  hs-source-dirs:   src
  default-language: Haskell2010
  other-modules:
    Base
    CMakeBuilder
    Rules.AnthyData
    Rules.Boost
    Rules.Fcitx5Data
    Rules.Fmt
    Rules.GLog
    Rules.LevelDB
    Rules.LibChewing
    Rules.LibUV
    Rules.LibHangul
    Rules.LibIME
    Rules.LibIMEJyutping
    Rules.LibIconv
    Rules.LibIntlLite
    Rules.LibMozc
    Rules.LibRime
    Rules.LibThai
    Rules.Lua
    Rules.Marisa
    Rules.OpenCC
    Rules.YAMLCpp
    Rules.ZSTD
